# Automated-Code-Documentation

./: .env  .env.example  .gitignore  README.md  app.py  code_docs.db  init_db.py  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: __init__.py  routes.py
app/models/: __init__.py  base.py  documentation.py  user.py
app/models/fourth_fine_tuned_model/: README.md  adapter_config.json  adapter_model.safetensors
app/prompts/: CoTFewShot.py
app/services/: __init__.py  agent_controller.py  code_service.py  doc_rag_service.py  documentation_service.py
app/services/model_training/: fine_tune.py  test.py
app/templates/: index.html
app/utils/: __init__.py  auth.py  parsers.py
code_docs.egg-info/: PKG-INFO  SOURCES.txt
data/: test_dataset.json
genai/: pyvenv.cfg
genai/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill
scripts/: build_index.py  download_datasets.py  evaluate_model.py  train_model.py
uploads/: setup.py
vectorstore/: code_index.faiss
